--- a/search_movie.html
+++ b/search_movie.html
@@ -12,12 +12,11 @@
         <div class="search">
             <label>찾는 영화:</label>
             <input id="searchBox" type="text" placeholder="제목을 검색하세요">
-            <button type="submit" id="searchBtn">검색 폼태그</button>
-           
+            <button type="submit" id="searchBtn">검색 폼태그</button>          
         </div>
     </header>
     <section id="movie-cards">
-
+       <!--영화 카드가 생성될 섹션-->
     </section>
     <script src="./movie.js"></script>
 </body>
