--- a/search_movie.html
+++ b/search_movie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>영화 검색 사이트</title>
+    <title>Cinephile_MovieCollection</title>
     <link href="movie.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
