--- a/search_movie.html
+++ b/search_movie.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cinephile_MovieCollection</title>
-    <link href="movie.css" rel="stylesheet" type="text/css" />
+    <link href="./style/reset.css" rel="stylesheet" type="text/css" />
+    <link href="./style/movie.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header id="header">
-      <img src="Cinephile_logo.png" id="logo" />
+      <img src="./assets/Cinephile_logo.png" id="logo" />
       <div class="search">
         <svg xmlns="http://www.w3.org/2000/svg" id="searchIcon" viewBox="0 0 512 512"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
         <input id="searchBox" type="text" placeholder="Search" onkeyup="enterKey()"/>
@@ -20,6 +21,6 @@
     <section id="movie-cards">
       <!--영화 카드가 생성될 섹션-->
     </section>
-    <script src="./movie.js"></script>
+    <script src="./src/movie.js"></script>
   </body>
 </html>
